sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/TransitionAppSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General user-adjustable settings for the Transition Application.</description>
    <label>Transition App Settings</label>
</CustomObject>