sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/Async_Requests_Are_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Async_Requests_Are_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables/Disables the continuation of processing of Async Request Queueable Apex</description>
    <inlineHelpText>WARNING: When unchecked, this managed package will not properly function.</inlineHelpText>
    <label>Async Requests Are Enabled</label>
    <type>Checkbox</type>
</CustomField>