sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/Collapse_Welcome_Section_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Collapse_Welcome_Section_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, collapses the &quot;Welcome&quot; section of the Assessment report, and allows the user to see the report results right away.</description>
    <inlineHelpText>If checked, collapses the &quot;Welcome&quot; section of the Assessment report, and allows the user to see the report results right away.</inlineHelpText>
    <label>Collapse Welcome Section By Default</label>
    <type>Checkbox</type>
</CustomField>