sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/Exclusion_List_Active__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_List_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Blacklisted Entries (custom metadata) will be subtracted from the Org Objects available for source mapping.</description>
    <label>Exclusion List Active</label>
    <type>Checkbox</type>
</CustomField>