sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/Hide_Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>Hide_Report_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked the Report Summary section of the Assessment Report will not be shown.</description>
    <inlineHelpText>If checked the Report Summary section of the Assessment Report will not be shown.</inlineHelpText>
    <label>Hide Report Summary</label>
    <type>Checkbox</type>
</CustomField>