sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/MetadataComponentDependencyBatchSize__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentDependencyBatchSize__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Metadata Component Dependency Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>