sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/Notable_Objects_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Notable_Objects_Threshold__c</fullName>
    <label>Notable Objects Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>