sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/System_Log_External__c.field-meta.xml
<CustomField>
    <fullName>System_Log_External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, newly created System Logs will be shared with Salesforce.</description>
    <inlineHelpText>When checked, newly created System Logs will be shared with Salesforce.</inlineHelpText>
    <label>System Log External</label>
    <type>Checkbox</type>
</CustomField>