sfdc-ac-transition-pkg/force-app/main/default/objects/TransitionAppSettings__c/fields/System_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>System_Log_Level__c</fullName>
    <description>The lowest LoggingLevel that should be tracked in System Log records</description>
    <inlineHelpText>Error, Warn, Debug, Info, or None</inlineHelpText>
    <label>System Log Level</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>